[gd_scene load_steps=4 format=2]

[ext_resource path="res://xxl/img/0.png" type="Texture" id=1]
[ext_resource path="res://xxl/res/new_styleboxflat.tres" type="StyleBox" id=2]
[ext_resource path="res://xxl/tableItem/xxlTableItem.gd" type="Script" id=4]

[node name="TableBorder" type="PanelContainer"]
margin_right = 120.0
margin_bottom = 120.0
input_pass_on_modal_close_click = false
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 4 )

[node name="ItemBorder" type="PanelContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 93.0
margin_bottom = 93.0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = ExtResource( 2 )

[node name="ItemImg" type="TextureRect" parent="ItemBorder"]
margin_left = 3.0
margin_top = 3.0
margin_right = 83.0
margin_bottom = 83.0
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="gui_input" from="." to="." method="_on_TableBorder_gui_input"]
